# image-retrieval

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md.bak.1782004332  Cargo.toml  README.md  RELEASE_GATES.md
.spec-executor/: report-TASK-001-rust-cli-foundation-JRJC82.json  report-TASK-001-rust-cli-foundation-JRJC82.md  report-TASK-002-queryplan-cli-planning-BEG62M.json  report-TASK-002-queryplan-cli-planning-BEG62M.md  report-TASK-003-base-provider-search-Q6AG2Q.json  report-TASK-003-base-provider-search-Q6AG2Q.md  report-TASK-004-candidate-openclaw-quality-P875R4.json  report-TASK-004-candidate-openclaw-quality-P875R4.md  report-TASK-005-retrieval-channel-batch-7EJWKP.json  report-TASK-005-retrieval-channel-batch-7EJWKP.md  report-TASK-006-image-acceptance-orchestrator-NFFT3R.json  report-TASK-006-image-acceptance-orchestrator-NFFT3R.md  report-TASK-007-delivery-policy-observability-VX6ZRG.json  report-TASK-007-delivery-policy-observability-VX6ZRG.md  report-TASK-008-readiness-self-check-SG7G5K.json  report-TASK-008-readiness-self-check-SG7G5K.md  report-TASK-009-e2e-fixture-release-gates-ADCJ92.json  report-TASK-009-e2e-fixture-release-gates-ADCJ92.md  report-TASK-010-mvp-delivery-acceptance-Y6AQ0P.json  report-TASK-010-mvp-delivery-acceptance-Y6AQ0P.md  report-TASK-011-production-real-service-validat-Q5DA88.json  report-TASK-011-production-real-service-validat-Q5DA88.md
docs/: HLD.md  PRD.md
src/: lib.rs  main.rs  pipeline.rs
tests/: baseline_candidate_recall_unit.rs  baseline_candidate_retrieval_unit.rs  baseline_catalog_test.rs  baseline_delivery_unit.rs  (+9 more)
(+269 files in other folders)
