[package]
name = "image-retrieval"
version = "0.1.0"
edition = "2021"
description = "General-purpose image search, retrieval, validation, and delivery packaging CLI"
license = "MIT"
repository = "https://github.com/innuama-coder/image-retrieval"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ureq = "2"

[dev-dependencies]
