[package]
name = "image-retrieval"
version = "0.1.0"
edition = "2021"
description = "General-purpose image search, retrieval, validation, and delivery packaging CLI"
license = "MIT"
repository = "https://github.com/innuama-coder/image-retrieval"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
ureq = "2"
uuid = { version = "1", features = ["v4"] }
toml = "0.8"

[dev-dependencies]
toml = "0.8"
